--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 logging.level.org.springframework=info
 #spring.security.user.name=oykwon
 #spring.security.user.password=qwer1234
+
+spring.datasource.url=jdbc:h2:mem:testdb
+
+spring.jpa.defer-datasource-initialization=true
